<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/x_base_pane"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/x_base_pane"
        android:clipToOutline="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="13.5dp"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="1sp"
            android:text="@string/header_target"
            android:textAppearance="@style/title"
            android:textStyle="bold"
            android:translationY="-0.7sp" />

        <View
            android:id="@+id/separator_t"
            android:layout_width="wrap_content"
            android:layout_height="0.33dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="13.5dp"
            android:layout_marginEnd="-1dp"
            android:background="@drawable/separator_t" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/x_base_pane"
        android:orientation="vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:labelFor="@id/editText"
            android:text="@string/name_pay" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:height="44dp"
            android:autofillHints=""
            android:background="@drawable/x_base_bann"
            android:ems="10"
            android:inputType="textPersonName"
            android:labelFor="@id/textView"
            android:padding="12dp"
            android:text="@string/editName"
            android:textColor="#818C99"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="8dp"
            android:labelFor="@id/editText4"
            android:text="@string/summ" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:height="44dp"
            android:background="@drawable/x_base_bann"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:text="@string/editSumm"
            android:textColor="#818C99"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="8dp"
            android:labelFor="@id/editText5"
            android:text="@string/target" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:height="44dp"
            android:background="@drawable/x_base_bann"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:text="@string/example"
            android:textColor="#818C99"
            android:textSize="16sp"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:labelFor="@id/editText6"
            android:paddingTop="26dp"
            android:text="@string/description" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@drawable/x_base_bann"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:text="@string/when"
            android:textColor="#818C99"
            android:textSize="16sp"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:labelFor="@id/editText9"
            android:paddingTop="26dp"
            android:text="@string/when_pay" />

        <EditText
            android:id="@+id/editText9"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:height="44dp"
            android:background="@drawable/x_base_bann"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:text="@string/vk_pay_1234"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:importantForAutofill="no" />

        <RelativeLayout
            android:id="@+id/x_base_butt"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:background="@drawable/x_base_butt">

            <TextView
                android:id="@+id/label"
                android:layout_width="101dp"
                android:layout_height="20dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="top"
                android:lineSpacingExtra="2sp"
                android:text="@string/label"
                android:textAppearance="@style/label"
                android:translationY="-1.05sp" />
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>