<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/canvas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBEDF0"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/x_base_pane"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/x_base_pane"
        android:clipToOutline="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_marginTop="13.5dp"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="1sp"
            android:text="@string/title"
            android:textAppearance="@style/title"
            android:textStyle="bold"
            android:translationY="-0.7sp" />

        <View
            android:id="@+id/separator_t"
            android:layout_width="wrap_content"
            android:layout_height="0.33dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="13.5dp"
            android:layout_marginEnd="-1dp"
            android:background="@drawable/separator_t" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal|center_vertical"
            android:lineSpacingExtra="1sp"
            android:text="@string/text"
            android:textAppearance="@style/text" />

        <RelativeLayout
            android:id="@+id/x_base_butt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/x_base_butt">

            <TextView
                android:id="@+id/label"
                android:layout_width="101dp"
                android:layout_height="20dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="top"
                android:lineSpacingExtra="2sp"
                android:text="@string/label"
                android:textAppearance="@style/label"
                android:translationY="-1.05sp" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>